# dacapo_monai

./: .gitignore  INTEGRATION_SUMMARY.md  MONAI_INTEGRATION.md  PROJECT_SUMMARY.md  README.md  demo.py  pyproject.toml  setup.py  test_workflows.py
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: Makefile  changelog.md  conf.py  index.md  requirements.txt  test_docs.py
docs/_static/: custom.css  custom.js  logo.txt
docs/api_reference/: dataset.md  index.md  transforms.md  utils.md
docs/developer_guide/: index.md
docs/examples/: index.md
docs/getting_started/: index.md  installation.md  quickstart.md
docs/user_guide/: index.md
examples/: basic_medical_imaging.py  migration_example.py  ssl_contrastive_learning.py
src/dacapo_monai/: __init__.py  dataset.py  transforms.py  utils.py
src/dacapo_monai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_basic.py
tmp/: nux.py.py  raw_loader.py  ssl_train.py  ssl_train_integrated.py  test_monai_integration.py  test_realistic_monai.py  test_workflows.py
